Fix map alignment issue

--- a/frontend/public/assets/css/map.css
+++ b/frontend/public/assets/css/map.css
@@ -1,14 +1,14 @@
-body, html {
-  width: 100%;
-  height: 100%;
-  margin: 0;
-  padding: 0;
-  background-color: red;
+#map {
+    height: 100%;
 }
 
+html,
+body {
+    margin: 0;
+    padding: 0;
+}
 
-#map {
-    width: 100%;
-    height: 100%;
-    background-color: aquamarine;
+body {
+    width: 100vw;
+    height: 100vh;
 }
