--- a/frontend/public/assets/css/style.css
+++ b/frontend/public/assets/css/style.css
@@ -1,6 +1,5 @@
 #map {
-    height: 400px;
-    /* The height is 400 pixels */
+    height: 100%;
     width: 100%;
     /* The width is the width of the web page */
   }
